--- a/views/message.twig
+++ b/views/message.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts.frontend' %}
+{% extends 'cms::layouts.frontend' %}
 
 {% block content %}
     <div class="row container" id="wrapper">
