--- a/views/template-parts/single-movie.twig
+++ b/views/template-parts/single-movie.twig
@@ -1,4 +1,4 @@
-{% extends('layouts.frontend') %}
+{% extends('cms::layouts.frontend') %}
 
 {% block content %}
     {% set genres = get_post_taxonomies(post, 'genres') %}
