--- a/views/template-parts/single.twig
+++ b/views/template-parts/single.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts.frontend' %}
+{% extends 'cms::layouts.frontend' %}
 
 {% block content %}
     {% set cats = get_post_taxonomies(post, 'categories', {
