:+1: Add play subtitle

--- a/views/components/player_script.twig
+++ b/views/components/player_script.twig
@@ -6,7 +6,7 @@
     var resumeId = encodeURI('{{ md5(json_encode(files)) }}');
     var playerInstance = jwplayer('ajax-player');
     var files = JSON.parse('{{ json_encode(files)|raw }}');
-    var tracks = JSON.parse('{{ json_encode(tracks)|raw }}');
+    var tracks = JSON.parse('{{ json_encode(tracks|default([]))|raw }}');
 
     if(typeof playerInstance != 'undefined'){
 
