--- a/views/watch/watch.twig
+++ b/views/watch/watch.twig
@@ -122,7 +122,7 @@
                     <div class="clearfix"></div>
 
                     <div class="title-block watch-page">
-                        <a href="javascript:;" data-toggle="tooltip" title="{{ trans('theme::app.add_to_bookmark') }}">
+                        <a href="javascript:;" data-toggle="tooltip" title="{{ __('Add to bookmark') }}">
                             <div id="bookmark" class="bookmark-img-animation primary_ribbon" data-post_id="{{ post.id }}" data-thumbnail="{{ post.thumbnail }}" data-href="{{ post.url }}" data-title="{{ post.title }}" data-date="{{ post.release }}">
                                 <!-- <div class="mymo-pulse-ring"></div> -->
                             </div>
